Adding WiFI AP setup, enabling SSH, using head of pimod.

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,7 +18,7 @@ jobs:
           submodules: recursive
 
       - name: Build image
-        uses: Nature40/pimod@v0.4.4
+        uses: Nature40/pimod@master
         with:
           pifile: ${{ github.event.inputs.pifile }}.Pifile
 
